# megalodon-jax

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
assets/tokenizer/: tokenizer_config.json
benchmarks/: __init__.py  benchmark_cema_reset.py  benchmark_model_paths.py
docs/: README.md  dev.md  dtypes-and-stability.md  ema-implementation.md  installation.md  jax-torch.md  long-context-streaming.md  optimization-reference-environment.txt  paper-deviations.md  profiling.md  upstream-parity-contract.md
scripts/: profile_forward.py  profile_ops.py
src/megalodon/: __init__.py  configuration_megalodon.py  modeling_megalodon.py
src/megalodon_jax/: __init__.py  cache.py  checkpoint.py  config.py  convert.py  inference.py  model.py  ops.py  precision.py  types.py  utils.py
src/megalodon_jax/layers/: __init__.py  attention.py  complex_ema.py  norms.py  rotary.py  segments.py  timestep_norm.py
src/pytorch_reference/: __init__.py  modeling_megalodon.py
tests/: __init__.py  conftest.py  factories.py  test_attention.py  test_benchmark_infrastructure.py  test_core_layers.py  test_foundation.py  test_inference.py  test_megalodon_smoke.py  test_megalodon_training.py  test_model.py  test_timestep_norm_candidates.py  test_tooling.py  test_upstream_parity.py  test_workflows.py  torch_ref.py  utils.py
tests/reference/: __init__.py  cache.py  timestep_norm.py  training.py  upstream.py
tools/: benchmark_timestep_norm_candidates.py  timestep_norm_candidates.py  verify_modeling_correctness.py  verify_timestep_norm_candidates.py
