[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "megalodon-jax"
description = "JAX/Equinox impl of Megalodon for efficient, JIT-compiled training and inference"
authors = [
  { name = "Peter Szemraj", email = "peterszemraj+megalodon@gmail.com" },
]
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = [
  "megalodon",
  "attention",
  "ema",
  "long-context",
  "llm",
  "jax",
  "equinox",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
  "jax>=0.7.0",
  "equinox>=0.12.0",
  "jaxtyping>=0.2",
  "safetensors>=0.4",
]

[project.urls]
Homepage = "https://github.com/pszemraj/megalodon-jax"
Repository = "https://github.com/pszemraj/megalodon-jax"

[project.optional-dependencies]
dev = ["pytest>=7.0", "torch>=2.6", "optax", "ruff>=0.5"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["megalodon_jax*"]

[tool.setuptools_scm]
write_to = "src/megalodon_jax/_version.py"

[tool.pytest.ini_options]
pythonpath = ["src"]
# Run all tests in tests/ directory
testpaths = ["tests"]
markers = [
  "cuda: tests that require a CUDA-capable device",
  "torch_ref: PyTorch reference tests (not run by default)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
# F722: jaxtyping uses string annotations that ruff doesn't understand
# F821: jaxtyping dimension names in strings
ignore = ["E501", "F722", "F821"]

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports in __init__.py files
"__init__.py" = ["F401"]
# Auto-generated version file
"_version.py" = ["UP007"]
