[build-system]
requires = ["setuptools>=77", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "megalodon-jax"
description = "JAX/Equinox implementation of Megalodon for efficient long-context training and inference"
authors = [
  { name = "Peter Szemraj", email = "peterszemraj+megalodon@gmail.com" },
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
  "megalodon",
  "attention",
  "ema",
  "long-context",
  "llm",
  "jax",
  "equinox",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
  "jax>=0.10.2,<0.11",
  "equinox>=0.13.8,<0.14",
  "jaxtyping>=0.2",
  "numpy>=2.0",
  "safetensors>=0.4",
]

[project.urls]
Homepage = "https://github.com/pszemraj/megalodon-jax"
Documentation = "https://github.com/pszemraj/megalodon-jax/blob/main/docs/README.md"
Issues = "https://github.com/pszemraj/megalodon-jax/issues"

[project.optional-dependencies]
cuda13 = [
  "jax[cuda13]>=0.10.2,<0.11",
]
convert = [
  "torch>=2.6",
]
dev = [
  "pytest>=7.0",
  "torch>=2.6",
  "ruff>=0.5",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["megalodon_jax*"]

[tool.setuptools_scm]
write_to = "src/megalodon_jax/_version.py"
# Sentinel for source trees without SCM metadata; release versions come from Git tags.
fallback_version = "0.0.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
# Run all tests in tests/ directory
testpaths = ["tests"]
markers = [
  "fast: authoritative CPU correctness gate intended for routine CI",
  "torch_ref: independent PyTorch checks derived from the exact local released source",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
# F722: jaxtyping uses string annotations that ruff doesn't understand
# F821: jaxtyping dimension names in strings
# UP037: quoted jaxtyping dimension names must remain strings
ignore = ["E501", "F722", "F821", "UP037"]

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports in __init__.py files
"__init__.py" = ["F401"]
# Auto-generated version file
"_version.py" = ["UP007"]
